--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,6 @@ logging.level.org.springframework.web=DEBUG
 
 # Data source
 #spring.datasource.driver=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/tododb
+spring.datasource.url=jdbc:postgresql://pg-exp:5432/tododb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
